# srs-protocol

./: APPLICATION_GUIDE.md  Cargo.toml  LICENSE  OraSRS_v2.0_Framework_Design.md  OraSRS_v2.0_Threat_Intelligence_Protocol.md  README.md  REBRANDING_ANNOUNCEMENT.md  SRS_PROTOCOL_SPEC.md  TENCENT_BLOCKCHAIN_DEPLOYMENT_GUIDE.md  api.md  build-chainmaker-contract.sh  comprehensive_integration_tests.py  demo_main.rs  go.work  orasrs-agent-example.rs  orasrs_protocol_tests.rs  package-lock.json  package.json  pfsense_plugin_tests.py  simple-test-srs.js  splunk_app_tests.py  srs-engine.js  srs-routes.js  srs-service.js  start-srs-service.js  test-srs-engine.js  test-srs-integration.js  xsoar_integration_tests.py
.github/workflows/: ci-cd.yml
cache/: solidity-files-cache.json  test-failures
chainmaker-contract/: Dockerfile  README.md  go.mod  main.go
contract_docker_go/: build.sh  go.mod  main.go  security_test.go
contracts/: ThreatEvidence.sol
demo_src/: main.rs
docs/: demo.html  index.html
orasrs-agent/: Cargo.toml  USAGE.md  agent-architecture.md
orasrs-agent/src/: agent.rs  analyzer.rs  blocklist_exporter.rs  compliance.rs  config.rs  consensus_verification.rs  credibility_enhancement.rs  crypto.rs  error.rs  integration_tests.rs  lib.rs  main.rs  monitor.rs  p2p.rs  reporter.rs  threat_intel_upstream.rs
package/main/: orasrs
pfsense_plugin/: install.sh  orasrs_form.xml  orasrs_pkg.xml  orasrs_plugin.php  uninstall.sh
src/: monitoring.js
test/: ThreatEvidenceTest.t.sol  orasrs.test.js
xsoar_integration/: orasrs_integration.py  orasrs_integration.yml
(+12 files in other folders)
