[package]
name = "orasrs-agent"
version = "2.0.0"
edition = "2021"
description = "OraSRS v2.0 Lightweight Threat Detection Agent"
license = "Apache-2.0"

[[bin]]
name = "orasrs-agent"
path = "src/main.rs"

[lib]
name = "orasrs_agent"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.53", features = ["tcp", "dns", "gossipsub", "identify", "kad", "macros"] }
blake3 = "1.5"
ring = "0.17"  # For cryptographic operations
rand = "0.8"
futures = "0.3"
async-std = "1.12"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
bytes = "1.0"
thiserror = "1.0"
pin-project = "1.0"
async-stream = "0.3"
config = "0.14"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ipnetwork = "0.20"
maxminddb = "0.24"

# Optional SM crypto support
sm-crypto = { version = "0.7", optional = true }

[features]
default = []
sm_crypto = ["sm-crypto"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true